<resources>
    <string name="app_name">Recycle View</string>
    <string name="nazad">Nazad</string>
    <string name="id">ID</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="REST_API">https://fruityvice.com/api</string>
    <string name="REST_API_KLJUC">kljuc=tjakopec</string>
    <string name="REST_problem">Problem s učitanjem podataka</string>
    <string name="placeholder">some text...</string>
    <string name="name">Name:</string>
    <string name="genus">Genus:</string>
    <string name="family">Family:</string>
    <string name="order">Order:</string>
    <string name="carbohydrates">Carbohydrates:</string>
    <string name="protein">Protein:</string>
    <string name="fat">Fat:</string>
    <string name="calories">Calories:</string>
    <string name="sugar">sugar:</string>
</resources>